# aura

./: CMakeLists.txt  README.md
.cache/clangd/index/: aabb2d.h.F175778CB0A2FAB0.idx  affine-mat.h.55E4CC6F05D91C30.idx  affine-post.h.9B9824C9A25FA2C4.idx  affine-pre.h.CE65062E7F6D843B.idx  affine.h.1122C5FEF89F8B43.idx  affine.h.3D84A5202958D41B.idx  affine2d-post.h.9EE22FE2E93125B4.idx  affine2d.h.BD866BF21394AFCD.idx  aura.h.52D431D7EB25AE87.idx  aura_shader.c.4A932570225EC2CA.idx  aura_window.c.8B31C2AC6ECCFA27.idx  bezier.h.0CCA86ABAAC01283.idx  box.h.8E3B74E8E208C392.idx  cam.h.5205802DA08105C9.idx  cglm.h.242B1EB3F1AAF60B.idx  color.h.2FCE5C00CDB40CEB.idx  common.h.0FB19D9DB700BBD8.idx  curve.h.959AC6932DD57AB5.idx  ease.h.6446B78054092ECA.idx  euler.h.C96DF6925DB23633.idx  euler_to_quat_rh.h.EEDFC165146FBEF7.idx  example.c.2A3F780025EB9701.idx  freetype.h.D9062BECFE38E94C.idx  frustum.h.8E49CAC64EDF083B.idx  ft2build.h.6B6AF3EFE18C97D0.idx  ftconfig.h.9AE94BD64C811FB6.idx  fterrdef.h.13A34C37719C2147.idx  fterrors.h.508AD0702AAA3BC3.idx  ftheader.h.02271714EB347907.idx  ftimage.h.5C808A0927A2D7DB.idx  ftmoderr.h.7FDA120084072940.idx  ftoption.h.0E20B8FAFCA97839.idx  ftstdlib.h.6F1AF5DAAF0E4D99.idx  ftsystem.h.52853E556B205888.idx  fttypes.h.BD0FDEB2A6C32E99.idx  glad.c.6FEC3BF76FEAC227.idx  glad.h.CCFA0835D36728A9.idx  glfw3.h.04BEA2C3D5C1D900.idx  integer-types.h.EA86EF774A136256.idx  intrin.h.68BCF653C53C70AE.idx  (+44 more)
examples/: animation.c  example.c  keyboard.c  mouse.c  rectangle.c  shader.c  sprite.c  text.c  window.c
include/: aura.h
lib/: freetype.lib  glfw3.lib
resources/shaders/: base2D.fs  base2D.vs  rect.fs  rect.vs  sprite.vs  spritesheet.fs  spritesheet.vs  text.fs  texture2D.fs  texture2D.vs
src/core/: context.c  material.c  mesh.c  sprite.c  spritesheet.c  timer.c
src/font/: aura_font.c
src/graphics/: renderable.c  renderer.c  textrenderer.c
src/material/: aura_shader.c
src/renderer/: aura_shader.c
src/text/: font.c  glyph.c
src/utils/: utils.c
src/window/: aura_window.c
